  * New maintainer (Closes: #648341)
  * Packaging update
    + standards to recent versions
    - completely dropped CDBS, in favour of debhelper
    + parallel build
    + dh-autoreconf replaced old patches for make files
    + use dpkg-provided build flags + hardening
    + build-depends update (Closes: #655308)
      - dropped libgoffice dependency (to package latest abiword 2.9.2)
    + debian/copyright to DEP-5 format
    + revised mime-types-desktop patch (Closes: #608164)
    + new patch to disable smooth scrolling (Closes: #624095)
    + new patch (only applied on Hurd) to fix GNU Hurd build problem
      (Closes: #648153) (Thanks to Svante Signell)
    + debian/watch is updated

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Mon, 21 Nov 2011 01:58:27 +1100

abiword (2.9.1-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Drop Build-Depends on obsolete libgucharmap2-dev. Closes: #648026

 -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2011 13:06:45 +0100

abiword (2.9.1-0.1) unstable; urgency=low

  [ Hector Oron ]
  * New upstream release.
  * Fix plugin license incompatibility introduced in NMU
    abiword/2.8.6-0.1 (Closes: #602687).
  * Merge diff for NMU version 2.8.6-0.3 (Closes: #613294).
  * Build depend on libgsf-1-dev, librasqal3-dev, librdf0-dev.
  * Fix bogus build depend on libwpd8-dev to libwpd-dev.
  * Fix build with hardening flags (format-security).
  * Refresh fix_no_undefined patch.

  [ Patrik Fimml ]
  * New upstream release (closes: #577733)
  * Do not ship libtool .la file (Policy 10.2)
  * Remove build-dependency on libaspell-dev (closes: #570647)
  * Switch to 3.0 (quilt) source package format

 -- Hector Oron <zumbi@debian.org>  Thu, 20 Oct 2011 01:00:54 +0000

abiword (2.8.6-0.4) unstable; urgency=low

  * Non-maintainer upload.
  * Stop shipping .la files. Closes: #33314.
  * Pass -Wl,--no-undefined instead of --no-undefined. Closes: #628267.

 -- Regis Boudin <regis@debian.org>  Wed, 24 Aug 2011 20:50:05 +0100
